# CarrotToy

./: .gitignore  ARCHITECTURE.md  ARCHITECTURE_DIAGRAMS.md  CHANGELOG.md  CMakeLists.txt  CarrotToy.code-workspace  DYNAMIC_COMPILATION_COMPLETE.md  EXAMPLES.md  IMPLEMENTATION.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  LICENSE  PLATFORM.md  PLATFORM_IMPLEMENTATION.md  QUICKSTART.md  README.md  REFACTORING_COMPLETE.md  REFACTORING_MODULE_INITIALIZATION.md  REFACTORING_SUMMARY_ZH.md  RHI.md  RHI_BUILD.md  RHI_SUMMARY.md  SHADER_RHI_REFACTORING.md  TODO.md  xmake.lua
assets/: README.md
docs/: ARCHITECTURE.md  BUILD.md  COMPLETION_REPORT.md  CONTRIBUTING.md  DYNAMIC_MODULE_FIX.md  FINAL_SUMMARY.md  FINAL_SUMMARY_DYNAMIC_FIX.md  FUTURE_MODULES.md  IMPLEMENTATION_SUMMARY.md  MIGRATION_GUIDE.md  MODULE_ARCHITECTURE.md  MODULE_DEPENDENCIES.md  MODULE_LINKING_NOTES.md  MODULE_QUICK_REFERENCE.md  MODULE_REFACTORING_2026_02_01.md  MODULE_SYSTEM.md  MODULE_SYSTEM_CN.md  MODULE_SYSTEM_FINAL.md  MODULE_SYSTEM_REFACTORING_2026_02_02.md  PROPER_DLL_MODULE_REGISTRATION.md  PR_SUMMARY.md  REFACTORING_COMPLETE.md  REFACTORING_TESTRHIAPP.md  REORGANIZATION_SUMMARY.md  RHI_DIAGRAMS.md  RHI_GLFW_REMOVAL.md  RHI_GUIDE.md  RHI_IMPLEMENTATION_SUMMARY.md  TESTRHIAPP_FIX_SUMMARY.md  TESTRHIAPP_MODULE_LOADING_FIX.md  TUTORIAL.md  VALIDATION_CHECKLIST.md  VISUAL_EXPLANATION.md  动态模块修复.md  模块系统最终方案.md  模块系统重构总结.md  正确的DLL模块注册方案.md
include/: CoreUtils.h  Material.h  MaterialEditor.h  OpenGLRHI.h  PlatformTypes.h  RHI.h  RHIResources.h  RHITypes.h  RayTracer.h  Renderer.h  Shader.h
shaders/: default.frag  default.ps.hlsl  default.vs.hlsl  unlit.frag  unlit.ps.hlsl  unlit.vs.hlsl
src/: Material.cpp  MaterialEditor.cpp  OpenGLRHI.cpp  RHIExample.cpp  RayTracer.cpp  Renderer.cpp  Shader.cpp  main.cpp
src/CustomModule/: xmake.lua
src/CustomModule/Private/: CustomModule.cpp  CustomModule.h
src/DefaultGame/: xmake.lua
src/DefaultGame/Private/: DefaultGameModule.h  DefualtGame.cpp  GameModules.cpp  GameModules.h
src/Editor/: xmake.lua
src/Editor/Private/: EditorModule.cpp  MaterialEditor.cpp
src/Editor/Public/: EditorAPI.h  EditorModule.h  (+1 more)
src/Platform/: Platform.cpp
src/Private/: MaterialEditor.cpp  Path.cpp  Shader.cpp
src/Public/: Shader.h
src/RenderBackendSandbox/: README.md  xmake.lua
src/TestRHIApp/: xmake.lua
(+102 files in other folders)
